Add build instructions for MacOS app